# paths-mgr

./: .gitignore  CMakeLists.txt  README.md  draft.md  main.cpp  paths_mgr.sh  prj_paths_mgr.sh
Google_tests/: CMakeLists.txt  PathsMgrTests.cpp  arguments_parser_test.cpp  base_tests.h  common_tests.cpp  diskdata_io_tests.cpp  path_tests.cpp
PathsMgr_lib/: ArgumentsParser.cpp  ArgumentsParser.h  CMakeLists.txt  DiskDataIO.cpp  DiskDataIO.h  Path.cpp  Path.h  PathsMgr.cpp  PathsMgr.h  common.cpp  common.h
